@@ -13,8 +13,9 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -39,18 +40,15 @@ class MealControllerTest {
         MockitoAnnotations.openMocks(this);
         this.mockMvc = MockMvcBuilders.standaloneSetup(mealController).build();
 
-        // Assuming the food IDs are strings
-        List<String> foodIds = Arrays.asList("foodId1", "foodId2");
+        // Set up food names and weights as a Map<String, Double>
+        Map<String, Double> foodNames = new HashMap<>();
+        foodNames.put("Apple", 100.0);
+        foodNames.put("Banana", 50.0);
 
         mealDto = MealDto.builder()
                 .name("Fruit Salad")
                 .category(FoodCategory.COMPOSITE)
-                .caloriesPerGram(0.5)
-                .proteinsPerGram(0.02)
-                .fatsPerGram(0.01)
-                .carbsPerGram(0.13)
-                .weight(200)
-                .foods(foodIds)
+                .foodNames(foodNames)
                 .build();
     }
 
@@ -60,21 +58,25 @@ class MealControllerTest {
 
         mockMvc.perform(post("/api/meals")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"Fruit Salad\",\"category\":\"COMPOSITE\",\"caloriesPerGram\":0.5,\"proteinsPerGram\":0.02,\"fatsPerGram\":0.01,\"carbsPerGram\":0.13,\"weight\":200,\"foods\":[\"foodId1\",\"foodId2\"]}"))
+                        .content("{\"name\":\"Fruit Salad\",\"category\":\"COMPOSITE\",\"caloriesPerGram\":0.5,\"proteinsPerGram\":0.02,\"fatsPerGram\":0.01,\"carbsPerGram\":0.13,\"foodNames\":{\"Apple\":100.0,\"Banana\":50.0}}"))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.name").value("Fruit Salad"))
-                .andExpect(jsonPath("$.category").value("COMPOSITE")); // Compare the string value directly
+                .andExpect(jsonPath("$.category").value("COMPOSITE"))
+                .andExpect(jsonPath("$.foodNames.Apple").value(100.0))
+                .andExpect(jsonPath("$.foodNames.Banana").value(50.0));
     }
 
     @Test
     void getAllMealsTest() throws Exception {
-        when(mealService.getAllMeal()).thenReturn(Arrays.asList(mealDto));
+        when(mealService.getAllMeal()).thenReturn(List.of(mealDto));
 
         mockMvc.perform(get("/api/meals")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].name").value("Fruit Salad"))
-                .andExpect(jsonPath("$[0].category").value("COMPOSITE"));
+                .andExpect(jsonPath("$[0].category").value("COMPOSITE"))
+                .andExpect(jsonPath("$[0].foodNames.Apple").value(100.0))
+                .andExpect(jsonPath("$[0].foodNames.Banana").value(50.0));
     }
 
     @Test
@@ -85,19 +87,23 @@ class MealControllerTest {
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.name").value("Fruit Salad"))
-                .andExpect(jsonPath("$.category").value("COMPOSITE"));
+                .andExpect(jsonPath("$.category").value("COMPOSITE"))
+                .andExpect(jsonPath("$.foodNames.Apple").value(100.0))
+                .andExpect(jsonPath("$.foodNames.Banana").value(50.0));
     }
 
     @Test
     void updateMealTest() throws Exception {
-        when(mealService.updateMeal(anyString(), any(MealDto.class))).thenReturn(mealDto);
+        when(mealService.updateMeal(any(MealDto.class))).thenReturn(mealDto);
 
         mockMvc.perform(put("/api/meals/{id}", "1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"Fruit Salad\",\"category\":\"FRUIT\",\"caloriesPerGram\":0.5,\"proteinsPerGram\":0.02,\"fatsPerGram\":0.01,\"carbsPerGram\":0.13,\"weight\":200,\"foods\":[\"foodId1\",\"foodId2\"]}"))
+                        .content("{\"name\":\"Fruit Salad\",\"category\":\"COMPOSITE\",\"caloriesPerGram\":0.5,\"proteinsPerGram\":0.02,\"fatsPerGram\":0.01,\"carbsPerGram\":0.13,\"foodNames\":{\"Apple\":100.0,\"Banana\":50.0}}"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.name").value("Fruit Salad"))
-                .andExpect(jsonPath("$.category").value("COMPOSITE"));
+                .andExpect(jsonPath("$.category").value("COMPOSITE"))
+                .andExpect(jsonPath("$.foodNames.Apple").value(100.0))
+                .andExpect(jsonPath("$.foodNames.Banana").value(50.0));
     }
 
     @Test
